[metadata]
name = factorgpg
version = 1.0.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Typing :: Typed

[options]
install_requires =
    numpy
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    factorgpg = factorgpg:factorgpg

